assets/css/style.css
body, html {
    margin: 0 auto;
    background-color: #F5F5F5;
    width: 100%;
    height: 100%;
}

img {
    max-width: 100%;
    max-height: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#home-navbar {
    position: fixed;
    height: 80px;
    width: 100%;

    z-index: 1;
    background-color: #F5F5F5;
}

#logo-button {
    position: absolute;
    height: 80px;
    width: 80px;
}

#logo-icon {
    margin: 15px;
    height: 50px;
    width: 50px;
}

.logo-icon {
    border-radius: 10px;
}

#logo-icon:hover {
    cursor: pointer;
}

#navbar-search-tile {
    position: absolute;
    left: 80px;
    height: 100%;
    width: calc(45% - 80px);
}

#navbar-search-box {
    position: relative;
    top: 14px;
    left: 1px;
    height: 50px;
    border: 1px solid #A9A9A9;
    border-radius: 10px;
}

#navbar-search-icon {
    position: absolute;
    top: 10px;
    left: 15px;
    height: 30px;
    width: 30px;
}

#navbar-search-query {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 60px;
    height: 30px;
    width: calc(98% - 60px);
    background-color: #F5F5F5;
    border: 0;

    font-family: 'Lato', sans-serif;
    font-size: 25px;
    color: black;
}

#navbar-search-query:active {
    border: 0;
}

#navbar-content {
    position: absolute;
    left: 55%;
    height: 100%;
    width: calc(45% - 80px);
}

.drop-down-tile {
    position: relative;
    float: left;
    left: 10%;
    height: 100%;
    width: 30%;

    transition: 0.3s;
}

.drop-down-tile:hover {
    background-color: #d0d0d0;

    transition: 0.3s;
}

.drop-down-text {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    text-align: center;

    font-family: 'Lato', sans-serif;
    font-size: 25px;
    color: black;
}

#cart-button {
    position: absolute;
    left: 100%;
    transform: translateX(-100%);
    height: 80px;
    width: 80px;
}

#cart-icon {
    margin: 15px;
    height: 50px;
    width: 50px;

    opacity: 0.5;
}

#cart-icon:hover{
    cursor: pointer;
}

#splash-background {
    position: absolute;
    top: 80px;
    height: 66%;
    width: 100%;

    border-bottom: 1px solid black;
}

#splash-content {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    margin: 0 auto;
    height: 250px;
    width: 60%;
}

.splash-tile {
    height: 75px;
    width: 100%;
}

#company-name {
    position: relative;
    top: 50%;
    transform: translateY(-50%) skew(-5deg, 0deg);
    text-align: center;

    font-size: 75px;
    font-family: 'URW Chancery L', cursive;
    color: #ff3f47;
}

#one-liner {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    text-align: center;

    font-size: 40px;
    font-family: 'Lato', sans-serif;
    color: black;
}

#splash-search-tile {
    height: 100px;
}

#splash-search-box {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    margin: 0 auto;
    height: 70px;

    border: 1px solid #A9A9A9;
    border-radius: 15px;
}

#splash-search-icon {
    position: absolute;
    top: 10px;
    left: 20px;
    height: 50px;
    width: 50px;
}

#splash-search-query {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 90px;
    height: 30px;
    width: calc(98% - 90px);
    background-color: #F5F5F5;
    border: 0;

    font-family: 'Lato', sans-serif;
    font-size: 30px;
    color: black;
}

#splash-search-query:active {
    border: 0;
}

#content-wrapper {
    position: absolute;
    top: calc(66% + 80px);
    width: 90%;

    left: 50%;
    transform: translateX(-50%);
}

.carousel-wrapper {
    height: 350px;
    width: 100%;
}

.carousel-name {
    height: 50px;

    font-family: 'Lato', sans-serif;
    font-size: 35px;
    font-weight: 600;
    color: black;
}

.carousel-row {
    height: 300px;
    width: 100%;
    display: flex;
}

.carousel-item {
    flex-grow: 1;
    padding: 15px;
}

